--- a/composer.json
+++ b/composer.json
@@ -27,12 +27,7 @@
 	},
 	"require": {
 		"php": "^8.1",
-		"illuminate/support": "^10.0|^11.0",
-		"illuminate/database": "^10.0|^11.0",
-		"illuminate/http": "^10.0|^11.0",
-		"illuminate/routing": "^10.0|^11.0",
-		"illuminate/validation": "^10.0|^11.0",
-		"illuminate/foundation": "^10.0|^11.0"
+		"laravel/framework": "^10.0|^11.0|^12.0"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "^10.0",
